--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/griddy0u/StudyBuddy#readme",
   "dependencies": {
     "express": "^4.14.0"
-  }
+  },
+  "devDependencies": {}
 }
