--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "studybuddy",
   "version": "1.0.0",
-  "author": "Richard Oh, Ingrid Ou, Jovan Limosnero",
+  "description": "",
 
   "main": "studybuddy.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/griddy0u/StudyBuddy.git"
   },
 
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/griddy0u/StudyBuddy/issues"
@@ -21,10 +22,7 @@
 
   "homepage": "https://github.com/griddy0u/StudyBuddy#readme",
   "dependencies": {
-    "express": "^4.14.0",
-    "express3-handlebars": "*",
-    "mongodb": "*",
-    "mongoose": "*"
+    "express": "^4.14.0"
   },
 
   "engines": {
