--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/griddy0u/StudyBuddy#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "jsonfile": "^2.4.0"
   },
   "engines": {
     "node": "4.6.0"
